# cc2report

./: .gitignore  API.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT_PLAN.md  LICENSE  PUBLISHING_PLAN.md  README-ar.md  README-de.md  README-es.md  README-fr.md  README-hi.md  README-id.md  README-it.md  README-ja.md  README-ko.md  README-ms.md  README-nl.md  README-pl.md  README-pt.md  README-ru.md  README-th.md  README-tr.md  README-vi.md  README-zh.md  README.md  RELEASE_CHECKLIST.md
.github/workflows/: ci.yml  release.yml
examples/: basic_usage.md
src/: ai_analyzer.rs  ai_analyzer_parallel.rs  cache.rs  cli.rs  config.rs  conversation_analyzer.rs  error.rs  intelligent_summary.rs  lib.rs  logger.rs  main.rs  parser.rs  smart_analyzer.rs  templates.rs  token_tracker.rs  work_report_v2.rs
tests/: integration_test.rs
tests/data/test-project/: test-session.jsonl
